--- a/Visualization/styles.css
+++ b/Visualization/styles.css
@@ -1,9 +1,67 @@
+/*global body style*/
 body {
-    font-family: Arial, sans-serif;
+  font-family: sans-serif;
+  background: #1e1e1e;
+  color: #f5f5f5;
+  padding: 20px;
+  margin: 0;
 }
 
-#visualization {
-    width: 100%;
-    height: 600px;
-    border: 1px solid #ccc;
+/*title*/
+h1 {
+  margin-bottom: 20px;
+}
+
+/*dwopdown controls container*/
+.controls {
+  margin-bottom: 20px;
+}
+
+/*label styling*/
+label {
+  margin-right: 10px;
+}
+
+/*styling for select dropdowns and number inputs*/
+select, input[type="number"] {
+  margin-right: 20px;
+  padding: 5px;
+  background: #333;
+  color: white;
+  border: 1px solid #777;
+}
+
+/*dashboard layout sstyle*/
+.dashboard {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+/*individuial visualization container*/
+.viz {
+  background: #2a2a2a;
+  border-radius: 8px;
+  padding: 10px;
+  flex: 1;
+  min-width: 1000px;
+}
+
+/*svg chart style*/
+svg {
+  width: 100%;
+  height: 400px;
+}
+
+/*Tooltip Styling*/
+#tooltip {
+    font-size: 12px;
+    padding: 5px 8px;
+    background: white;
+    color: black;
+    border: 1px solid gray;
+    border-radius: 4px;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.2s ease;
 }
