--- a/Visualization/styles.css
+++ b/Visualization/styles.css
@@ -12,9 +12,26 @@ h1 {
   margin-bottom: 20px;
 }
 
-/*dwopdown controls container*/
-.controls {
-  margin-bottom: 20px;
+/*layout for seperated dropdown groups*/
+.selection_controls,
+.filter_controls {
+  margin-bottom: 15px;
+}
+
+.selection_controls label,
+.filter_controls label {
+  margin-right: 10px;
+}
+
+/*layout for inputing user value display*/
+.selection_controls select,
+.filte_controls select,
+.filter_controls input[type="number"] {
+  margin-right: 20px;
+  padding: 5px;
+  background: #333;
+  color: white;
+  border: 1px solid #777;
 }
 
 /*label styling*/
